--- a/wp-content/themes/wrec-theme/src/styles/base/_forms.scss
+++ b/wp-content/themes/wrec-theme/src/styles/base/_forms.scss
@@ -312,6 +312,7 @@ input[type="button"] {
 		position: relative;
 		background-color: var(--color-grey-dark);
 		color: white;
+		border-radius: 0;
 	}
 	&__submit {
 		position: absolute;
