--- a/wp-content/themes/wrec-theme/src/styles/components/_filter.scss
+++ b/wp-content/themes/wrec-theme/src/styles/components/_filter.scss
@@ -1,6 +1,10 @@
 .filter {
-	padding-bottom: var(--spacing-l);
-	padding-top: var(--spacing-xl);
+	padding-bottom: var(--spacing);
+	padding-top: var(--spacing);
+	@include mq(medium) {
+		padding-bottom: var(--spacing-l);
+		padding-top: var(--spacing-xl);
+	}
 	&__targets {
 		padding-top: 10px;
 	}
