--- a/wp-content/themes/wrec-theme/src/styles/components/_post.scss
+++ b/wp-content/themes/wrec-theme/src/styles/components/_post.scss
@@ -39,7 +39,10 @@
 	&-selection {
 		display: flex;
 		// width: 100%;
-		padding: 0 calc(var(--spacing-xl) - 10px);
+		padding: 0 var(--spacing);
+		@include mq(medium) {
+			padding: 0 calc(var(--spacing-xl) - 10px);
+		}
 		&--filter {
 			margin-left: auto;
 			margin-right: 20px;
